--- a/templates/byp_b2c_booking/index.ejs
+++ b/templates/byp_b2c_booking/index.ejs
@@ -708,20 +708,23 @@
             <ul>
 
               <li class="listCircle">
-                <h4>Booking Conversion Rate: Improved by 169% </h4>
+                <h4>Booking Conversion Rate: Improved by 169% (from 15% to 40%)   </h4>
               </li>
 
               <li class="listCircle">
-                <h4>Reduced Time to Book: 48% Decrease </h4>
+                <h4>Reduced Time to Book: 48% Decrease (from 5 minutes to 2.6 minutes)                </h4>
               </li>
               <li class="listCircle">
-                <h4>Booking Abandonment Rate: 67% Reduction </h4>
+                <h4>Booking Abandonment Rate: 67% Reduction (from 30% to 10%)
+                </h4>
               </li>
               <li class="listCircle">
-                <h4>Repeat Booking Rate: Increased by 124% </h4>
+                <h4>Repeat Booking Rate: Increased by 124% (from 25% to 56%)
+                </h4>
               </li>
               <li class="listCircle">
-                <h4>Add-on Sales Rate: Increased by 73%</h4>
+                <h4>Add-on Sales Rate: Increased by 73% (from 15% to 26%)
+                </h4>
               </li>
 
             </ul>
