--- a/templates/index.ejs
+++ b/templates/index.ejs
@@ -109,96 +109,48 @@
       </div>
     </div>
   </div>
+  <div class="blankHS"></div>
 
   <!-- Content -->
   <section id="projects">
-    <!-- Arrow -->
-    <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {
+    <div class="colorBgWhie pattern2">
+      <!-- Arrow -->
+      <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {
       message: 'Projects' ,
       spacing:''
       }) %>
-    <!-- Arrow -->
-    <div class="blankHXS"></div>
-    <div class="wrapper">
-
-      <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
-        <div class="Grid-cell main">
-          <div class="element">
-
-            <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience">
-          </div>
-        </div>
-
-        <div class="Grid-cell aside aside-2">
-          <div class="element ">
-            <h1 class="specialTextL">Business Booking Experience</h1>
-
-            <h2 class="colorLandingText">Business owners managing appointments for their clients </h2>
-            <ul>
-
-              <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
-              </li>
-              <li class="listCircle">
-                Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
-
-              </li>
-
-            </ul>
-
-          </div>
-        </div>
-      </div>
-      <div class="blankHM"></div>
-      <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
-        <div class="Grid-cell main">
-          <div class="element">
-
-            <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience">
-          </div>
-        </div>
-        <div class="Grid-cell aside aside-1">
-          <div class="element ">
-            <h1 class="specialTextL">Business Booking Experience</h1>
-
-            <h2 class="colorLandingText">Business owners managing appointments for their clients </h2>
-            <ul>
-
-              <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
-              </li>
-              <li class="listCircle">
-                Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
-
-              </li>
-
-            </ul>
-
-          </div>
-          <div class="element">
-            <a href="/byp_b2b_booking"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
-              </button></a>
-          </div>
-        </div>
-
-      </div>
-
-    </div>
-
-    <div class="wrapper">
-
-
-
-    </div>
-    <div class="blankHS"></div>
-
-    <div class="wrapper">
-      <div class="Grid Grid--gutters Grid--cols-2">
-        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder bypBlue paddingNone marginXS">
-          <a class="no-hover-effect" href="/byp_b2b_booking">
-            <img src="/projectImages/Cover_byp_b2b_booking.png" alt="Enhancing the Booking Experience">
+      <!-- Arrow -->
+      <div class="blankHXS"></div>
+      <div class="wrapper">
+        <div class="Grid Grid--full Grid--gutters u-textCenter">
+          <div class="Grid-cell">
             <div class="element">
-              <h3 class="arrCard"><strong>Enhancing the Business Booking Experience</strong></h3>
-              <h5>Business owners managing appointments for their clients.
-              </h5>
+              <h1 class="specialTextS"> SaaS Business Booking & Onboarding </h1>
+            </div>
+          </div>
+        </div>
+      </div>
+      <div class="blankHXS"></div>
+
+      <div class="wrapper">
+
+        <div class="Grid Grid--gutters Grid--holly-grail Grid--center">
+          <div class="Grid-cell main">
+            <div class="element">
+
+              <div class="paddingXL borderRadiusL gradient_background1">
+                <a href="/byp_b2b_booking">
+                <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience"></a>
+              </div>
+            </div>
+
+          </div>
+
+          <div class="Grid-cell aside aside-2">
+            <div class="element">
+              <h1 class="specialTextM">Business Booking Experience</h1>
+
+              <h3 class="colorLandingText fontWeight700">Business owners managing appointments for their clients </h3>
               <ul>
 
                 <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
@@ -211,26 +163,104 @@
               </ul>
 
             </div>
-          </a>
+            <div class="element">
+              <a href="/byp_b2b_booking"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+                </button></a>
+            </div>
+          </div>
         </div>
+        <div class="blankHM"></div>
+        <div class="Grid Grid--gutters Grid--holly-grail  Grid--center">
+          <div class="Grid-cell main">
+            <div class="element">
+
+              <div class="paddingXL borderRadiusL gradient_background2">
+                <a href="/byp_b2b_booking">
+                <img src="/projectImages/Cover_byp_b2b_booking_new.svg" alt="Business Booking Experience"></a>
+              </div>
+            </div>
+          </div>
+          <div class="Grid-cell aside aside-1">
+            <div class="element">
+              <h1 class="specialTextM">Customer Booking Experience</h1>
+
+              <h3 class="colorLandingText fontWeight700">Enhancing the Consumer Booking Experience
+              </h3>
+              <ul>
+
+                <li class="listCircle">Booking Conversion Rate: Improved by 169% (from 15% to 40%)
+                </li>
+  
+                <li class="listCircle">
+                  Reduced Time to Book: 48% Decrease (from 5 minutes to 2.6 minutes)                
+                </li>
+                <li class="listCircle">
+                  Booking Abandonment Rate: 67% Reduction (from 30% to 10%)
+                 
+                </li>
+   
+  
+              </ul>
+
+            </div>
+            <div class="element">
+              <a href="/byp_b2b_booking"> <button class="buttonCTA buttonLarge bgVWGrey">View Project
+                </button></a>
+            </div>
+          </div>
+
+        </div>
+
+      </div>
+
+      <div class="wrapper">
+
 
 
       </div>
-      <div class="Grid Grid--gutters Grid--cols-2">
-        <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder bypOrange paddingNone marginXS">
-          <a class="no-hover-effect" href="/byp_b2c_booking">
-            <img src="/projectImages/Cover_b2c_booking.png" alt="Enhancing the Booking Experience">
-            <div class="element">
-              <h3 class="arrCard"><strong>Enhancing the Consumer Service Booking Experience</strong></h3>
-              <h4>We optimized the booking flow for pet services on the BookYourPet platform. These improvements streamlined the process, enhanced user experience, and boosted business efficiency.
+      <div class="blankHS"></div>
 
-              </h4>
+      <div class="wrapper">
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder bypBlue paddingNone marginXS">
+            <a class="no-hover-effect" href="/byp_b2b_booking">
+              <img src="/projectImages/Cover_byp_b2b_booking.png" alt="Enhancing the Booking Experience">
+              <div class="element">
+                <h3 class="arrCard"><strong>Enhancing the Business Booking Experience</strong></h3>
+                <h5>Business owners managing appointments for their clients.
+                </h5>
+                <ul>
 
-            </div>
-          </a>
+                  <li class="listCircle">Reduced average booking time from 5 minutes to 3.5 minutes, making the process 30% faster.
+                  </li>
+                  <li class="listCircle">
+                    Decreased errors from 15 to 5 per 100 bookings, resulting in 67% fewer booking errors.
+
+                  </li>
+
+                </ul>
+
+              </div>
+            </a>
+          </div>
+
+
         </div>
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <div class="Grid-cell shadowBoxLt float cardBorder colorBgVW borderRadiusS cardBottomBorder bypOrange paddingNone marginXS">
+            <a class="no-hover-effect" href="/byp_b2c_booking">
+              <img src="/projectImages/Cover_b2c_booking.png" alt="Enhancing the Booking Experience">
+              <div class="element">
+                <h3 class="arrCard"><strong>Enhancing the Consumer Service Booking Experience</strong></h3>
+                <h4>We optimized the booking flow for pet services on the BookYourPet platform. These improvements streamlined the process, enhanced user experience, and boosted business efficiency.
 
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
+                </h4>
+
+              </div>
+            </a>
+          </div>
+
+          <%- include(`${templatePath}/shared/block_cardNoPassword`, {
           hoverBorderColor:`BYP`,
           cardNoPwURL:`${websitePath}/byp_b2b_subscription`,
           cardNoPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B.png`,
@@ -239,19 +269,19 @@
           }) %>
 
 
-      </div>
+        </div>
 
 
 
-      <div class="Grid Grid--gutters Grid--cols-2">
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <%- include(`${templatePath}/shared/block_cardNoPassword`, {
           hoverBorderColor:`BYP`,
           cardNoPwURL:`${websitePath}/byp_b2b_SaaS`,
           cardNoPwImgURL:`${websitePath}/projectImages/Cover_BYP_AppB2B_Redesign.png`,
           cardNoPwTitle: `B2B SaaS Booking App Revamp: The Transition from White-Glove to Self-Service`, 
           cardNoPwDescription:`Discover how we transformed the pet booking app with a strategic redesign, shifting from a white-glove service to a user-friendly self-service platform. This overhaul focused on enhancing key features, resulting in a significant 45% increase in user satisfaction and a more streamlined experience for pet owners. Join us on our journey to revolutionize pet care services with a seamless and intuitive booking experience.` 
           }) %>
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
+          <%- include(`${templatePath}/shared/block_cardNoPassword`, {
         hoverBorderColor:`LASO`,
         cardNoPwURL:`${websitePath}/refining_rx_zero/`,
         cardNoPwImgURL:`${websitePath}/projectImages/Cover_LASO_RXZero.png`,
@@ -259,9 +289,9 @@
         cardNoPwDescription:`This case study delves into LASO Health's strategic pivot towards the RX Zero model, moving away from RX Local and Telemedicine services. It highlights the key objectives of RX Zero, centering on credibility and affordability. The study showcases the streamlined onboarding and subscription process, along with a simplified ordering system.` 
         }) %>
 
-      </div>
-      <div class="Grid Grid--gutters Grid--cols-2">
-        <!--
+        </div>
+        <div class="Grid Grid--gutters Grid--cols-2">
+          <!--
           <%- include(`${templatePath}/shared/block_cardnPassword`, {
             cardPwID:`consumerBooking`,
             hoverBorderColor:`BYP`,
@@ -273,7 +303,7 @@
             %>
         -->
 
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
+          <%- include(`${templatePath}/shared/block_cardNoPassword`, {
           hoverBorderColor:`LASO`,
           cardNoPwURL:`${websitePath}/savings_calculator/`,
           cardNoPwImgURL:`${websitePath}/projectImages/Cover_LASO_CostCalculator.png`,
@@ -282,19 +312,20 @@
           }) %>
 
 
-        <%- include(`${templatePath}/shared/block_cardNoPassword`, {
+          <%- include(`${templatePath}/shared/block_cardNoPassword`, {
           hoverBorderColor:`LASO`,
           cardNoPwURL:`${websitePath}/admin_panel/`,
           cardNoPwImgURL:`${websitePath}/projectImages/Cover_LASO_AdminPanel.png`,
           cardNoPwTitle: `LASO Admin Panel: From Concept to Reality - Simplified User Management`, 
           cardNoPwDescription:`The core focus of this panel was to efficiently manage a diverse range of user accounts, including B2B, D2C, and guest users. A unique aspect of this project was accommodating users from B2B with company sponsorship, adding another layer of complexity to the design process.` 
           }) %>
+        </div>
+
+
+
       </div>
-
-
-
+      <!-- Content -->
     </div>
-    <!-- Content -->
   </section>
   <section id="experiments">
     <!-- Arrow -->
