--- a/templates/design_system/index.ejs
+++ b/templates/design_system/index.ejs
@@ -161,7 +161,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
     <nav class="section-nav">
       <ol>
-        <li><a href="#content1" class="titleRightPanel"><div class="paddingXS">Design Fundamentals</div></a>
+        <li><a href="#content1" class="titleRightPanel">
+            <div class="paddingXS">Design Fundamentals</div>
+          </a>
           <ul>
             <li class="rightPanel"><a href="#content11"> &#160; Color Guidance</a></li>
             <li class="rightPanel"><a href="#content12"> &#160; Typography & Wordmark</a></li>
@@ -169,7 +171,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
             <li class="rightPanel"><a href="#content15"> &#160; Layout & Responsive Grid</a></li>
           </ul>
         </li>
-        <li><a href="#content2" class="titleRightPanel"><div class="paddingXS">Atoms (Bases)</div></a>
+        <li><a href="#content2" class="titleRightPanel">
+            <div class="paddingXS">Atoms (Bases)</div>
+          </a>
           <ul>
             <li class="rightPanel"><a href="#content21"> &#160; Buttons </a></li>
             <li class="rightPanel"><a href="#content22"> &#160; Icons & Sizes</a></li>
@@ -181,7 +185,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
         </li>
 
-        <li><a href="#content3" class="titleRightPanel"><div class="paddingXS">Molecules (Comps)</div> </a>
+        <li><a href="#content3" class="titleRightPanel">
+            <div class="paddingXS">Molecules (Comps)</div>
+          </a>
           <ul>
             <li class="rightPanel"><a href="#content31"> &#160; Textual Elements</a></li>
             <li class="rightPanel"><a href="#content32"> &#160; Clipboard Copy Field </a></li>
@@ -197,7 +203,9 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
           </ul>
         </li>
-        <li><a href="#content4" class="titleRightPanel"><div class="paddingXS">Organisms (Blocks)</div></a>
+        <li><a href="#content4" class="titleRightPanel">
+            <div class="paddingXS">Organisms (Blocks)</div>
+          </a>
           <ul>
             <li class="rightPanel"><a href="#content41"> &#160; Expandable Content</a></li>
             <li class="rightPanel"><a href="#content42"> &#160; Interactive Accordion</a></li>
@@ -676,43 +684,43 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
 
         </div>
-          <div class="wrapper">
-  
-  
+        <div class="wrapper">
 
-  
-  
-            <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: `Logo with Text` }) %>
-  
-  
-            <div class="Grid Grid--gutters Grid--cols-2">
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="widthS" src="Wordmark_LogoTxt.svg" alt="Wordmark">
-  
-  
-                </div>
-              </div>
-            </div>
-  
-            <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: `Web Logo` }) %>
-  
-            <div class="blankHXS"></div>
-  
-            <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
-  
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="widthS" src="Wordmark_TxtFav.svg" alt="Wordmark">
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <img class="widthS" src="Wordmark_Txt.svg" alt="Wordmark">
-                </div>
+
+
+
+
+          <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: `Logo with Text` }) %>
+
+
+          <div class="Grid Grid--gutters Grid--cols-2">
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="widthS" src="Wordmark_LogoTxt.svg" alt="Wordmark">
+
+
               </div>
             </div>
           </div>
+
+          <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: `Web Logo` }) %>
+
+          <div class="blankHXS"></div>
+
+          <div class="Grid Grid--gutters Grid--cols-2 Grid--center">
+
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="widthS" src="Wordmark_TxtFav.svg" alt="Wordmark">
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <img class="widthS" src="Wordmark_Txt.svg" alt="Wordmark">
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
 
       <section id="content14">
@@ -921,7 +929,41 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
 
 
 
+        <div class="wrapper">
+          <div class="Grid Grid--full Grid--gutters u-textCenter">
+            <div class="Grid-cell">
+              <div class="element">
 
+                <div class="blankHXXS WarmBg centerVH">.blankHXXS </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blankHXS WarmBg centerVH">.blankHXS</div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blankHS WarmBg centerVH">.blankHS</div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blankHM WarmBg centerVH">.blankHM</div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blankHL WarmBg centerVH">.blankHL</div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="blankHXL WarmBg centerVH">.blankHXL</div>
+              </div>
+            </div>
+          </div>
+        </div>
         <div class="blankHXS"></div>
         <div class="wrapper">
           <div class="Grid Grid--gutters Grid--cols-6 Grid--bottom">
@@ -2144,99 +2186,99 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
         </div>
 
         <div class="blankHM"></div>
-          <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `base_iconsSizes`, textColor:'teal800', iconUrl:''}) %>
-  
-          <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Icons Sizes' }) %>
-  
-          <div class="blankHXS"></div>
-          <div class="wrapper">
-            <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="ClipboardBoxIconOnly">
-                    <button class="ClipboardIconOnly">
-                      <img class="iconXS hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                      <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                    </button>
-                  </div>
+        <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `base_iconsSizes`, textColor:'teal800', iconUrl:''}) %>
+
+        <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Icons Sizes' }) %>
+
+        <div class="blankHXS"></div>
+        <div class="wrapper">
+          <div class="Grid Grid--gutters Grid--cols-8 u-textCenter Grid--center">
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img class="iconXS hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
                 </div>
               </div>
-              <div class="Grid-cell">
-                <div class="element">
-  
-                  <div class="ClipboardBoxIconOnly">
-                    <button class="ClipboardIconOnly">
-                      <img class="iconS hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                      <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                    </button>
-                  </div>
-  
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="ClipboardBoxIconOnly">
-                    <button class="ClipboardIconOnly">
-                      <img class="iconM hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                      <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="ClipboardBoxIconOnly">
-                    <button class="ClipboardIconOnly">
-                      <img class="iconL hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                      <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="ClipboardBoxIconOnly">
-                    <button class="ClipboardIconOnly">
-                      <img class="iconXL hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                      <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element">
-                  <div class="ClipboardBoxIconOnly">
-                    <button class="ClipboardIconOnly">
-                      <img class="iconMax hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
-                      <p class="clickIconCopy">vickyw.design@gmail.com</p>
-                    </button>
-                  </div>
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element displayNone">
-  
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element displayNone">
-  
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element displayNone">
-  
-                </div>
-              </div>
-              <div class="Grid-cell">
-                <div class="element displayNone">
-  
-                </div>
-              </div>
-  
             </div>
+            <div class="Grid-cell">
+              <div class="element">
+
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img class="iconS hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img class="iconM hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img class="iconL hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img class="iconXL hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element">
+                <div class="ClipboardBoxIconOnly">
+                  <button class="ClipboardIconOnly">
+                    <img class="iconMax hoverGrey100 paddingXL fitContent borderRadiusMax" title="Copy to Clipboard" src="../icon/mail.svg" alt="LinkedIn">
+                    <p class="clickIconCopy">vickyw.design@gmail.com</p>
+                  </button>
+                </div>
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element displayNone">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element displayNone">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element displayNone">
+
+              </div>
+            </div>
+            <div class="Grid-cell">
+              <div class="element displayNone">
+
+              </div>
+            </div>
+
           </div>
-          <%- include(`${templatePath}/shared/block_copyCode`, {
+        </div>
+        <%- include(`${templatePath}/shared/block_copyCode`, {
             wrapperGrid: true, 
             copyCodeName:'iconSizes', 
             copyCodeT1:`iconSizesT1`, 
@@ -2249,8 +2291,8 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
             HTML: ejsLiterals.html.base_iconSizes,
             CSS: ejsLiterals.css.base_iconSizes,
           }) %>
-  
-  
+
+
       </section>
 
       <section id="content24">
@@ -2285,34 +2327,34 @@ pageURL:'design_system', thumbnailImgURL: 'vickywang_web.png'
           HTML: ejsLiterals.html.base_link,
           CSS: ejsLiterals.css.base_link,
         }) %>
-                <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Inputs' }) %>
-                <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `base_inputs`, textColor:'teal800', iconUrl:''}) %>
-                <div class="blankHXS"></div>
-                <div class="wrapper">
-                  <div class="img__wrap widthS heightS element">
-                    <div class="img__descriptionDesignSystem">
-                      <div class="input-field">
-                        <div class="column">
-                          <label for="password">
-                            <h5>Password</h5>
-                          </label>
-                          <div class="pwContainer">
-                            <input class="PWinput" type="password" id="password" placeholder="Enter password">
-                            <button class="passwordArr" type="submit">
-                              <img src="../icon/arrow-forward.svg" alt="Enter">
-                            </button>
-                          </div>
-                          <div class="pwIncorrectHeight">
-                            <span id="pwIncorrect">Password is incorrect </span>
-                          </div>
-                        </div>
-                      </div>
-                    </div>
+        <%- include(`${templatePath}/shared/comp_textualElements_arrow`, {message: 'Inputs' }) %>
+        <%- include(`${templatePath}/shared/comp_content_subtitle`, {type:'left', title: `base_inputs`, textColor:'teal800', iconUrl:''}) %>
+        <div class="blankHXS"></div>
+        <div class="wrapper">
+          <div class="img__wrap widthS heightS element">
+            <div class="img__descriptionDesignSystem">
+              <div class="input-field">
+                <div class="column">
+                  <label for="password">
+                    <h5>Password</h5>
+                  </label>
+                  <div class="pwContainer">
+                    <input class="PWinput" type="password" id="password" placeholder="Enter password">
+                    <button class="passwordArr" type="submit">
+                      <img src="../icon/arrow-forward.svg" alt="Enter">
+                    </button>
+                  </div>
+                  <div class="pwIncorrectHeight">
+                    <span id="pwIncorrect">Password is incorrect </span>
                   </div>
                 </div>
-        
-        
-                <%- include(`${templatePath}/shared/block_copyCode`, {
+              </div>
+            </div>
+          </div>
+        </div>
+
+
+        <%- include(`${templatePath}/shared/block_copyCode`, {
                   wrapperGrid: true, 
                   copyCodeName:'baseInput', 
                   copyCodeT1:`baseInputT1`, 
