--- a/templates/shared/comp_tagCloud.ejs
+++ b/templates/shared/comp_tagCloud.ejs
@@ -1,4 +1,4 @@
-<div class="blankHM"></div>
+<div class="blankHXS"></div>
 <div class="Grid Grid--full Grid--gutters u-textCenter">
     <ul class="tags" id="TagsCloud">
 
@@ -47,4 +47,4 @@
 
     </ul>
   </div>
-  <div class="blankHM"></div>
+  <div class="blankHXS"></div>
