--- a/templates/shared/comp_textualElements_arrow.ejs
+++ b/templates/shared/comp_textualElements_arrow.ejs
@@ -17,7 +17,7 @@
     </div>
 </div>
 <% } else { %>
-    <div class="blankHS"></div>
+    <div class="blankHXXS"></div>
     <div class="wrapper">
         <div class="Grid Grid--full Grid--gutters u-textCenter">
             <div class="Grid-cell">
@@ -29,5 +29,5 @@
             </div>
         </div>
     </div>
-    <div class="blankHXS"></div>
+    <div class="blankHXXS"></div>
     <% } %>
